# Sappling-Gtk

./: README.md  com.github.pedromiguel_dev.Sappling.json  meson.build
.flatpak-builder/cache/refs/heads/x86_64-com.github.pedromiguel_dev.Sappling.json/: init
.flatpak-builder/checksums/: x86_64-com.github.pedromiguel_dev.Sappling.json
data/: com.github.pedromiguel_dev.Sappling.appdata.xml.in  com.github.pedromiguel_dev.Sappling.desktop.in  com.github.pedromiguel_dev.Sappling.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  main.vala  meson.build  sappling.gresource.xml  style.css  window.ui
src/Widgets/: Home.vala  Leaflet.vala  Products.vala  window.vala
src/Widgets/comp/: HeaderBar.vala
